--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preversion": "node scripts/preversion.js"
+    "preversion": "node scripts/preversion.js %s"
   },
   "repository": {
     "type": "git",
