--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "test-npm-version",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "version": "node scripts/preversion.js %s"
+    "version": "node scripts/preversion.js"
   },
   "repository": {
     "type": "git",
